Fixed CashDeskOperation service to work properly.